Endret til correct closing tag på alle footers + left alignment på dem

--- a/root/css/master.css
+++ b/root/css/master.css
@@ -391,6 +391,7 @@ footer h2 {
 footer a {
   text-decoration: none;
   color: #f8f8f8;
+  padding: 0;
 }
 
 .footer-text-container a:hover {
